<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="website"
        android:shortcutShortLabel="@string/website_app_name"
        android:shortcutLongLabel="@string/website_app_hint">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="aliaspaces://website"
            android:targetPackage="com.aliaspaces.social.local"
            android:targetClass="com.aliaspaces.social.local.WebsiteActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="social"
        android:shortcutShortLabel="@string/mode_social">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="aliaspaces://social"
            android:targetPackage="com.aliaspaces.social.local"
            android:targetClass="com.aliaspaces.social.local.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="local"
        android:shortcutShortLabel="@string/mode_local">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="aliaspaces://local"
            android:targetPackage="com.aliaspaces.social.local"
            android:targetClass="com.aliaspaces.social.local.MainActivity" />
    </shortcut>
</shortcuts>
